--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
           gif_out_path: dist/github-contribution-grid-snake.gif
           svg_out_path: dist/github-contribution-grid-snake.svg
           outputs: |
-            output/github-snake-dark.svg?palette=github-dark&color_snake=#e06c75
+            output/github-snake-dark.svg?color_snake=#e06c75
 
      # show the status of the build. Makes it easier for debugging (if there's any issues).
       - run: git status
