--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,7 @@
 name: Generate Datas
 on:
   schedule: # execute every 12 hours
-    - cron: "* */6 * * *"
+    - cron: "* */12 * * *"
   workflow_dispatch:
 jobs:
   build:
@@ -26,7 +26,7 @@ jobs:
           #                 The first one is 0 contribution, then it goes from the low contribution to the highest.
           #                 Exactly 5 colors are expected.
           outputs: |
-            output/github-snake-dark.svg?palette=github-dark&color_snake=#e06c75
+            output/github-snake-dark.svg?palette=github-dark&color_snake=#eb6f92
       - uses: crazy-max/ghaction-github-pages@v2.1.3
         with:
           target_branch: output
