--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       # Snake Animation
-      - uses: Platane/snk@v2
+      - uses: Platane/snk/svg-only@v2
         id: snake-gif
         with:
           # github user name to read the contribution graph from (**required**)
